--- a/React/src/index.css
+++ b/React/src/index.css
@@ -1,5 +1,9 @@
 body {
+  /*margin: 0;*/
+  height: 100%;
   margin: 0;
+  display: flex;
+  justify-content: flex-start!important;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
