Firt channel name is being diplayed

--- a/React/src/components/message/stylesheets/Channel.module.css
+++ b/React/src/components/message/stylesheets/Channel.module.css
@@ -28,6 +28,13 @@
 .content {
     text-align: center;
     padding: 1rem;
+    flex-direction: column;
+}
+
+.directMessage {
+    display: flex;
+    flex-direction: row;
+    text-align: center;
 }
 
 .content h3 {
