--- a/React/src/App.css
+++ b/React/src/App.css
@@ -1,10 +1,18 @@
+body {
+  width: 100%;
+  height: 100%;
+  background-image: url(./components/users/img/background.jpeg);
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 html, body, main {
   margin: 0;
   height: 100%;
 }
 
 .App {
-  border: 2px solid blue;
   margin: 0;
   height: 100%;
 }
