--- a/React/src/components/users/stylesheets/Login.css
+++ b/React/src/components/users/stylesheets/Login.css
@@ -1,15 +1,14 @@
-@media (min-width: 992px) {
-    .rounded-lg-3 { border-radius: .3rem; }
-}
-
-body {
-    background-image: url(../img/background.jpeg);
-    background-size: auto;
-    background-repeat: no-repeat;
-    background-position: center;
+.Login_component {
+    /*width: 100%;*/
+    /*height: 100%;*/
+    /*background-image: url(../img/background.jpeg);*/
+    /*background-size: auto;*/
+    /*background-repeat: no-repeat;*/
+    /*background-position: center;*/
     color: white;
 }
 
-button {
+.login {
     background-color: #00babc!important;
+    border: none!important;
 }
