--- a/React/src/components/users/stylesheets/Login.css
+++ b/React/src/components/users/stylesheets/Login.css
@@ -8,6 +8,10 @@
     color: white;
 }
 
+.header {
+    color: white;
+}
+
 .login {
     background-color: #00babc!important;
     border: none!important;
