--- a/React/src/index.css
+++ b/React/src/index.css
@@ -1,6 +1,10 @@
 html, body {
   margin: 0;
   height: 100%;
+  background-image: url(components/users/img/background.jpeg);
+  background-size: auto;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 body {
