refactor for twofactor login and register page and redirect with no auth for all current pages

--- a/React/src/components/users/stylesheets/Register.css
+++ b/React/src/components/users/stylesheets/Register.css
@@ -10,6 +10,12 @@
     color: white;
 }
 
+.registerSubTitle {
+    font-weight: bold;
+    color: red;
+    font-size: 15px;
+}
+
 form {
     text-align: center;
 }
