refactor update two factor settings pages all user pages are error checked

--- a/React/src/components/users/stylesheets/EnableTwoFactor.css
+++ b/React/src/components/users/stylesheets/EnableTwoFactor.css
@@ -19,6 +19,13 @@ form {
     font-size: 15px !important;
 }
 
+.enableText {
+    color: white !important;
+    font-size: 12px;
+    font-style: italic;
+    margin: 0;
+}
+
 .qrImg {
     margin-top: 10px;
     margin-bottom: 25px;
