add CreateDirectMessage component

--- a/React/src/components/chat/CreateChannel/RenderCreateChannel.css
+++ b/React/src/components/chat/CreateChannel/RenderCreateChannel.css
@@ -39,11 +39,10 @@ form {
 
 .form-check-input {
     margin-bottom: 10px;
-    margin-bottom: 10px;
 }
 
 .form-check-label, h1, h3 {
-    color: black;
+    color: white;
 }
 
 .btn-primary {
