--- a/React/src/components/chat/CreateChannel/CreateDirectMessage.module.css
+++ b/React/src/components/chat/CreateChannel/CreateDirectMessage.module.css
@@ -20,10 +20,11 @@
 }
 
 .submit_button {
-  margin-top: 10px;
-  background-color: #00babc !important;
   width: 100% !important;
+  background-color: #00babc !important;
+  color: white;
+  margin-top: 10px;
+  padding: 0.5rem 1rem;
   font-size: 1.25rem;
   border-radius: 0.3rem;
-  color: white;
 }
