--- a/React/src/index.css
+++ b/React/src/index.css
@@ -3,7 +3,7 @@ html, body {
   height: 100%;
   background-image: url(components/users/img/background.jpeg);
   background-size: auto;
-  background-repeat: no-repeat;
+  background-repeat: repeat;
   background-position: center;
 }
 
