--- a/React/src/components/chat/CreateChannel/RenderCreateChannel.css
+++ b/React/src/components/chat/CreateChannel/RenderCreateChannel.css
@@ -4,6 +4,7 @@
     justify-content: center;
     padding-top: 40px;
     padding-bottom: 40px;
+    flex-direction: column;
 }
 
 .participantSubTitle {
