--- a/React/src/components/users/stylesheets/Profile.css
+++ b/React/src/components/users/stylesheets/Profile.css
@@ -14,6 +14,18 @@
     margin: 20px 0;
 }
 
+.inviteButton {
+    background-color: rebeccapurple;
+    border: 2px solid rebeccapurple;
+    color: white;
+    font-weight: bolder;
+}
+
+.inviteButton:hover{
+    color:white;
+    transform: scale(1.1);
+}
+
 /* Profile sidebar */
 .profile-sidebar {
     padding: 20px 0 30px 0;
