--- a/React/src/components/users/stylesheets/Profile.css
+++ b/React/src/components/users/stylesheets/Profile.css
@@ -26,6 +26,11 @@
     transform: scale(1.1);
 }
 
+.notAvailable {
+    color: red;
+    font-weight: bolder;
+}
+
 /* Profile sidebar */
 .profile-sidebar {
     padding: 20px 0 30px 0;
