--- a/React/src/components/chat/ChatContent/ChatContent.css
+++ b/React/src/components/chat/ChatContent/ChatContent.css
@@ -10,3 +10,17 @@
 .ant-comment-content-author-time {
     color: #5B8FF9 !important;
 }
+
+.buttonsBar {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.leaveChannel {
+    margin: 10px;
+}
+
+.adminPanel {
+    margin: 10px;
+}
