--- a/React/src/components/chat/LeftSideBar/ChatSidebar.css
+++ b/React/src/components/chat/LeftSideBar/ChatSidebar.css
@@ -3,3 +3,15 @@
     height: 100%;
     border: 2px solid dimgrey;
 }
+
+.chatChannelsLock {
+    display: flex;
+}
+
+.channelName {
+    font-weight: bolder;
+}
+
+.lockImg {
+    margin-left: 10px;
+}
